--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for library app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "watch": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -12,12 +13,16 @@
   },
   "author": "Nina Welch",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NinaKWelch/ninas-library-backend/issues"
-  },
   "homepage": "https://github.com/NinaKWelch/ninas-library-backend#readme",
   "dependencies": {
     "apollo-server": "^2.9.15",
-    "graphql": "^14.5.8"
+    "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.4",
+    "mongoose-unique-validator": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
