--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URI='mongodb+srv://nina_01:talvilintu@cluster0-itgkm.mongodb.net/fullstack?retryWrites=true&w=majority'
-JWT_SECRET='tercestwj'
+JWT_SECRET='tercespot'
